- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "lastpage.doc.tar.xz": bcb4b46bdfb09132c0f30610b23e10029af8eb0f
-  "lastpage.source.tar.xz": fbfbc115307929080fea6affded16716c4876e75
-  "lastpage.tar.xz": 1f009997c152bd1e3e8d892081c36e0ed64ee275
+  lastpage.doc.tar.xz: f86766476508fe314c9d33880303fd7a27b1c5f5
+  lastpage.source.tar.xz: 697123285be3f764a3f1da89b426d359787bdfaa
+  lastpage.tar.xz: 30814fab0bd5fea3cb97e9b646d42832683da819
