--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  lastpage.doc.tar.xz: 821e3c978e39ad68c3a920ccb1a9dc34aa7964a1
-  lastpage.source.tar.xz: 1136475139358a57a58a854ba30e7d81a1143679
-  lastpage.tar.xz: 02d4fafc2dd68b0c42ecdc64eabd16fc551942ca
+  lastpage.doc.r60414.tar.xz: 465b773d77b4bbb6c29884539a3d5f4c8015ce02
+  lastpage.r60414.tar.xz: e3338e289a39f69d27a31b595e7b1618cc98c670
+  lastpage.source.r60414.tar.xz: 6257d9f5239ba27f063717b371cdbf0073db78a5
